src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>case_owner_calc__c</fullName>
        <formula>IF(
     Owner:Queue.Id &lt;&gt; null,
     Owner:Queue.QueueName,
     Owner:User.FirstName + &apos; &apos; + Owner:User.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Account__c</fullName>
        <description>Owner Account</description>
        <formula>Account.Owner_calculated__c</formula>
        <inlineHelpText>Owner Account</inlineHelpText>
        <label>Owner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Fr__c</fullName>
        <description>Product</description>
        <formula>opportunity_id__r.opportunity_product__c</formula>
        <inlineHelpText>Producto relacionado al caso</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_segment_desc__c</fullName>
        <description>Segment to Client</description>
        <formula>Account.segment_desc__c</formula>
        <inlineHelpText>Segmento del cliente relacionado</inlineHelpText>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_amount__c</fullName>
        <description>Amount Of Cient</description>
        <formula>opportunity_id__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monto de la oportunidad del cliente</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>proposed_apr_per__c</fullName>
        <label>proposed rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>suggested_apr_per__c</fullName>
        <label>suggested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>	
	<listViews>
        <fullName>AllClosedRequest</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity_id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Product_Name_Fr__c</columns>
        <columns>opportunity_amount__c</columns>
        <columns>Owner_Account__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Todas las peticiones cerradas</label>
        <language>en_US</language>
        <sharedTo>
            <group>Analysts_Tier_1</group>
            <group>Analysts_Tier_2</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllPendingRequest</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity_id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>account_segment_desc__c</columns>
        <columns>Product_Name_Fr__c</columns>
        <columns>opportunity_amount__c</columns>
        <columns>Owner_Account__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Todas las peticiones pendientes</label>
        <language>en_US</language>
        <sharedTo>
            <group>Analysts_Tier_1</group>
            <group>Analysts_Tier_2</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
<listViews>
        <fullName>Level1PendingRequest</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity_id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>account_segment_desc__c</columns>
        <columns>Product_Name_Fr__c</columns>
        <columns>opportunity_amount__c</columns>
        <columns>Owner_Account__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Nivel 1 peticiones pendientes</label>
        <language>en_US</language>
        <queue>Tier_1</queue>
        <sharedTo>
            <group>Analysts_Tier_1</group>
            <group>Analysts_Tier_2</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level2PendingRequest</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity_id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>account_segment_desc__c</columns>
        <columns>Product_Name_Fr__c</columns>
        <columns>opportunity_amount__c</columns>
        <columns>Owner_Account__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Nivel 2 peticiones pendientes</label>
        <language>en_US</language>
        <queue>Tier_2</queue>
        <sharedTo>
            <group>Analysts_Tier_1</group>
            <group>Analysts_Tier_2</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyClosedRequest</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity_id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Product_Name_Fr__c</columns>
        <columns>opportunity_amount__c</columns>
        <columns>Owner_Account__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mis peticiones cerradas</label>
        <language>en_US</language>
        <sharedTo>
            <group>Analysts_Tier_1</group>
            <group>Analysts_Tier_2</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyPendingRequest</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity_id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>account_segment_desc__c</columns>
        <columns>Product_Name_Fr__c</columns>
        <columns>opportunity_amount__c</columns>
        <columns>Owner_Account__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Mis peticiones pendientes</label>
        <language>en_US</language>
        <sharedTo>
            <group>Analysts_Tier_1</group>
            <group>Analysts_Tier_2</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 1</label>
        <queue>Tier_1</queue>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier 2</label>
        <queue>Tier_2</queue>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Status_Case</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISCHANGED( Status ) ,
NOT(bypass__c), 
$Profile.Name!=&apos;Administrador del sistema&apos;, 
$Profile.Name!=&apos;System Administrator&apos;, 
$Profile.Name!=&apos;Migracion&apos; )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You are not allowed to modify this field.</errorMessage>
    </validationRules>
</CustomObject>